# mica

./: .code-review-graphignore  .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  docker-compose.prod.yml  docker-compose.yml  install.ps1  install.sh  justfile  run.ps1  run.sh  rustfmt.toml
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml  flutter-integration.yml  release-windows.yml  release.yml  uptime.yml
clients/mica_flutter/: .gitignore  analysis_options.yaml  l10n.yaml  pubspec.yaml
clients/mica_flutter/fonts/: NOTICE.md
clients/mica_flutter/installer/: mica.iss
clients/mica_flutter/integration_test/: cloud_offline_nav_test.dart  cloud_offline_read_test.dart  cloud_sync_converge_test.dart  cloud_sync_integrity_test.dart  cloud_sync_test.dart  frb_document_test.dart  frb_editor_binding_test.dart  frb_roundtrip_test.dart  frb_store_test.dart  frb_sync_test.dart  frb_view_tree_test.dart  frb_zip_test.dart  gif_animation_test.dart  mermaid_render_test.dart  migration_sync_test.dart  offline_image_reconcile_test.dart  page_switch_fidelity_test.dart  vault_import_test.dart
clients/mica_flutter/lib/: cjk_fonts.dart  diagnostics.dart  diagnostics_stub.dart  diagnostics_web.dart  main.dart  prefs.dart  prefs_stub.dart  prefs_web.dart  updater.dart  updater_common.dart  updater_desktop.dart  updater_web.dart  window_setup.dart  window_setup_desktop.dart  window_setup_web.dart  window_snapped_win.dart
clients/mica_flutter/rust/: Cargo.toml
clients/mica_flutter/rust/src/: frb_generated.rs
clients/mica_flutter/rust/src/api/: document.rs  mod.rs  pdf.rs  render.rs  simple.rs  store.rs  zip.rs
crates/api-server/: Cargo.toml
crates/api-server/src/: blob_gc.rs  mail.rs  main.rs  rate_limit.rs  zip.rs
crates/api-server/src/routes/: ai.rs  ai_ws.rs  auth.rs  documents.rs  files.rs  health.rs  history.rs  import.rs  mod.rs  password_reset.rs  tokens.rs  workspaces.rs  ws.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: documents.rs  lib.rs  rooms.rs  store.rs  sync.rs
crates/app-core/tests/: sync_pg.rs
crates/cli/: Cargo.toml
crates/cli/src/: backup.rs  client.rs  config.rs  main.rs  mcp_install.rs
crates/infra/: Cargo.toml
crates/infra/src/: ai.rs  config.rs  db.rs  error.rs  lib.rs  mail.rs  storage.rs  telemetry.rs
crates/interchange/: Cargo.toml
crates/interchange/src/: export_tree.rs  import.rs  lib.rs  normalize.rs  notion.rs  order.rs
crates/interchange/src/zip/: gbk_table.rs  inflate.rs  mod.rs  names.rs  reader.rs
crates/interchange/tests/: engine.rs  proptest_zip.rs  zip_gold.rs
crates/interchange/tests/fixtures/: store_zip.gold
crates/markdown/: Cargo.toml
crates/markdown/src/: lib.rs  properties.rs
crates/markdown/tests/: callouts.rs  cjk_emphasis.rs  commonmark_gaps.rs  commonmark_scoreboard.rs  conformance.rs  export_html_document.rs  footnotes.rs  front_matter.rs  gfm_extensions.rs  indent_clamp.rs  linked_code_span.rs  math_code_span.rs  nested_bracket_perf.rs  paste_repro.rs  proptest_parse.rs  render_export.rs  table_inline_code.rs
crates/markdown/tests/fixtures/: gfm-extensions.json  paste.md
crates/markdown/tests/fixtures/conformance/: 01-headings.blocks.json  01-headings.md  01-headings.md.gold  02-inline.blocks.json  02-inline.md  02-inline.md.gold  03-lists.blocks.json  03-lists.md  03-lists.md.gold  04-todo.blocks.json  04-todo.md  04-todo.md.gold  05-quote.blocks.json  05-quote.md  05-quote.md.gold  06-code.blocks.json  06-code.md  06-code.md.gold  07-divider.blocks.json  07-divider.md.gold  08-image.blocks.json  08-image.md  08-image.md.gold  09-table.blocks.json  09-table.md  09-table.md.gold  10-mixed.blocks.json  10-mixed.md  10-mixed.md.gold  11-escapes-autolinks.blocks.json  11-escapes-autolinks.md  11-escapes-autolinks.md.gold  12-setext-indented-thematic.blocks.json  12-setext-indented-thematic.md  12-setext-indented-thematic.md.gold  13-links.blocks.json  13-links.md  13-links.md.gold  14-emphasis.blocks.json  14-emphasis.md  (+54 more)
crates/mcp-server/: Cargo.toml  README.md
crates/mcp-server/src/: lib.rs  main.rs
crates/mica-core/: Cargo.toml
crates/mica-core/src/: block.rs  doc.rs  lib.rs  marks.rs  store.rs
crates/mica-core/tests/: format_range.rs  markdown_invariant.rs  ops.rs  root_invariant.rs  roundtrip.rs  sync.rs  web_interop.rs
deploy/: .env.parity  .env.prod.example  Dockerfile.api  Dockerfile.cli  Dockerfile.web  backup.env.example  deploy.sh  docker-compose.images.yml  docker-compose.prod.yml  docker-compose.single.yml  docker-compose.traefik.yml  docker-compose.yml  mica-backup-loop.sh  mica-backup.service  mica-backup.sh  mica-backup.timer  mica-deploy.sh  nginx.conf  nginx.dev.conf  release-notes-v0.1.1.md  release-notes-v0.1.2.md  release-notes-v0.1.3.md  release-notes-v0.1.4.md  release-notes-v0.1.5.md  release-notes-v0.1.6.md  release-notes-v0.1.7.md  release-notes-v0.1.md  release-notes-v0.2.0.md  rustic-mica.sh
docs/: architecture.md  backup.md  bootstrap.md  cli.md  code-review-2026-07-20.md  comments-plan.md  commonmark-scoreboard.md  cross-workspace-move.md  deploy.md  desktop-plan.md  dev-environment.md  editor-engine.md  editor-virtualization-plan.md  editor.md  export-import.md  lessons.md  local-first-p2-design.md  local-first-p3-design.md  local-first-plan.md  mcp-connect.md  mcp-performance.md  mcp-server.md  mvp-plan.md  page-properties.md  password-reset.md  phase2-offline-crdt.md  release.md  render-architecture.md  roadmap.md  rust-migration-assessment-2026-07-21.md  sharing.md  shortcuts.md  sync-and-api.md  vault-mode.md  version-history-plan.md  window-manager-migration.md
migrations/: 0001_initial.sql  0002_file_original_name.sql  0003_workspace_yrs_sync.sql  0004_api_tokens.sql  0005_view_folder.sql  0006_refresh_tokens.sql  0007_blob_unreferenced_since.sql  0008_document_shares.sql  0009_document_yrs_versions.sql  0010_workspace_member_position.sql  0011_pages_are_leaves.sql  0012_document_content_text.sql  0013_password_reset_tokens.sql
seeds/: dev_seed.sql
(+232 files in other folders)
