[workspace]
members = [
  "crates/api-server",
  "crates/app-core",
  "crates/cli",
  "crates/infra",
  "crates/interchange",
  "crates/markdown",
  "crates/mcp-server",
  "crates/mica-core",
]
resolver = "2"

[workspace.package]
# Single source of truth for the version of the RELEASED binaries (api-server's
# /api/health, mica-cli's --version). Both inherit it via `version.workspace =
# true`, so a release bumps ONE line and they can't drift (mica-cli shipped
# 0.12.x but reported 0.1.6 for months because it had its own stale version).
# Internal libs (mica-core/app-core/markdown/infra) keep their own 0.1.0 — their
# version isn't user-visible. Keep in sync with pubspec.yaml + main.dart's
# kAppVersion on release (see docs/release.md).
version = "0.12.15"
edition = "2024"
license = "AGPL-3.0-or-later"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["json", "tokio", "http1", "http2", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures-util = "0.3"
hmac = "0.12"
jsonwebtoken = "9.3"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
sha1 = "0.10"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "chrono", "uuid", "json", "migrate"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["serde", "v4", "v7"] }
