[package]
name = "mica-api-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
# yrs sync updates are binary; the WS protocol is JSON text, so they ride as
# base64 (P2-M4). Standard wire-encoding glue.
base64 = "0.22"
chrono.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
mica-app-core = { path = "../app-core" }
mica-infra = { path = "../infra" }
mica-interchange = { path = "../interchange" }
rand_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["sync"] }
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
