[package]
name = "mica-api-server"
version = "0.5.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
# yrs sync updates are binary; the WS protocol is JSON text, so they ride as
# base64 (P2-M4). Standard wire-encoding glue.
base64 = "0.22"
chrono.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
mica-app-core = { path = "../app-core" }
mica-infra = { path = "../infra" }
mica-interchange = { path = "../interchange" }
rand_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["sync"] }
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
# Test-only: build real yrs bases for the P4-3 sv-reconciliation frame tests.
mica-core = { path = "../mica-core" }
# The refresh-token rotation IS its SQL (a conditional UPDATE is the concurrency
# guard), so its tests run against a real Postgres — see the DATABASE_URL-gated
# module in routes/auth.rs.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
