[package]
name = "mica-app-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mica-markdown = { path = "../markdown" }
mica-infra = { path = "../infra" }
# yrs data plane (no `store` feature → no rusqlite on the server). Used server-side
# to fold + validate the CRDT update stream (P2-M4).
mica-core = { path = "../mica-core" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
