[package]
name = "mica-cli"
version = "0.1.5"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "mica-cli"
path = "src/main.rs"

# A thin, pure HTTP client over the Mica REST API — the symmetric CLI to the MCP
# server. Backup is deliberately NOT built in (that was a mistake: it coupled us
# to `rustic_core` and re-invented what mature tools do better). Instead,
# `mica-cli export` mirrors every workspace to Markdown + images and you point an
# external backup tool (restic / rclone / borg / cron) at the output.
[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
mica-interchange = { path = "../interchange" }
reqwest = { workspace = true, features = ["blocking", "json"] }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
