[package]
name = "mica-interchange"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde_json.workspace = true
# The authoritative Markdown engine — the export tree-zip builder emits each
# page via `export_markdown_with_assets`. interchange already owns the IMPORT
# side (plan_import) + the ZIP writer; the export tree-walk is its counterpart,
# so both worlds (cloud Postgres / local SQLite) produce byte-identical archives
# by sharing this one pure builder. markdown does NOT depend on interchange, so
# no cycle. Default features (no render) keep it lean.
mica-markdown = { path = "../markdown" }

[dev-dependencies]
# Property fuzz: the ZIP import pipeline must never panic on malformed bytes
# (tests/proptest_zip.rs).
proptest = "1"
