[package]
name = "mica-mcp-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version = "1.85"

[[bin]]
name = "mica-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# The official Rust MCP SDK. `server` = build a server, `transport-io` = stdio,
# `macros` = the #[tool]/#[tool_router] attributes. Pinned at the crate level
# (not the workspace) since it's this binary's concern only.
rmcp = { version = "0.9", features = ["server", "transport-io", "macros"] }
schemars = "1"
