[package]
name = "mica-mcp-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version = "1.85"


[dependencies]
anyhow.workspace = true
# The authority on where a math run starts and ends (CLAUDE.md #2). The write
# guard must judge formulas by the same rules the parser does, not its own.
mica-markdown = { path = "../markdown" }
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# The official Rust MCP SDK. `server` = build a server, `transport-io` = stdio,
# `macros` = the #[tool]/#[tool_router] attributes. Pinned at the crate level
# (not the workspace) since it's this binary's concern only.
rmcp = { version = "0.9", features = ["server", "transport-io", "macros"] }
schemars = "1"
# MCP carries image bytes as base64 in an ImageContent block — that IS the wire
# format, so `mica_read_image` has to encode.
base64 = "0.22"
