[package]
name = "rust_lib_mica_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
# The shared, FFI-agnostic data plane. All real logic lives there; this crate is
# only the flutter_rust_bridge surface over it.
mica-core = { path = "../../../crates/mica-core", features = ["store"] }
# The authoritative Markdown engine (CommonMark 100% + GFM), reused for local
# vault import so parsing stays Rust-first + round-trip-stable with export. Its
# `Block` mirrors `mica-core::Block` exactly, so no schema translation is needed.
mica-markdown = { path = "../../../crates/markdown" }
# Blocks cross the FFI boundary as JSON strings (Dart already speaks that shape).
serde_json = "1"
# Fresh root-block ids for imported documents.
uuid = { version = "1", features = ["v4"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# This FFI crate physically lives inside the backend cargo workspace tree
# (D:/codes/mica), so declare its own workspace root — otherwise cargo walks up,
# finds the backend workspace, and refuses to build a non-member. It still
# path-depends on crates/mica-core across the boundary.
[workspace]
