[package]
name = "rust_lib_mica_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
# The shared, FFI-agnostic data plane. All real logic lives there; this crate is
# only the flutter_rust_bridge surface over it.
mica-core = { path = "../../../crates/mica-core", features = ["store"] }
# The authoritative Markdown engine (CommonMark 100% + GFM), reused for local
# vault import so parsing stays Rust-first + round-trip-stable with export. Its
# `Block` mirrors `mica-core::Block` exactly, so no schema translation is needed.
# `render` feature ON: pulls the merman Mermaid engine + LaTeX→MathML so the
# editor's live diagram preview AND the HTML/PDF export share ONE Rust engine
# (the Dart `merman` package is dropped — this crate is the only mermaid engine
# on desktop now).
mica-markdown = { path = "../../../crates/markdown", features = ["render"] }
# Blocks cross the FFI boundary as JSON strings (Dart already speaks that shape).
serde_json = "1"
# Same in-house store-ZIP writer the server uses (only serde_json underneath), so
# a LOCAL page/folder ZIP export is byte-identical to the cloud one — the export
# round-trip stays a single invariant across worlds.
mica-interchange = { path = "../../../crates/interchange" }
# Fresh root-block ids for imported documents.
uuid = { version = "1", features = ["v4"] }

# Windows-only PDF export (Path α): drive the OS-preinstalled WebView2 runtime's
# headless print-to-PDF. `webview2-com` is the same battle-tested binding Tauri's
# `wry` uses on Windows; `windows` version is pinned to match it (0.62).
[target.'cfg(windows)'.dependencies]
webview2-com = "0.39"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    # GetCurrentThreadId — the PDF export watchdog posts WM_QUIT at the STA
    # thread when a wedged WebView2/GPU would otherwise hang it forever.
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# This FFI crate physically lives inside the backend cargo workspace tree
# (D:/codes/mica), so declare its own workspace root — otherwise cargo walks up,
# finds the backend workspace, and refuses to build a non-member. It still
# path-depends on crates/mica-core across the boundary.
[workspace]
